--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,29 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
+alembic==1.13.2
+amqp==5.2.0
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
+billiard==4.2.0
 blinker==1.7.0
 cachelib==0.9.0
-celery
+celery==5.4.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 dataclasses-json==0.6.6
 distro==1.9.0
 faiss-cpu==1.8.0
 Flask==3.0.3
 Flask-Caching==2.3.0
-flask_migrate==4.0.7
-flask_sqlalchemy==3.1.1
+Flask-Cors==4.0.1
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
 frozenlist==1.4.1
 GeoAlchemy2==0.15.1
 greenlet==3.0.3
@@ -29,12 +36,14 @@ itsdangerous==2.2.0
 Jinja2==3.1.3
 jsonpatch==1.33
 jsonpointer==2.4
+kombu==5.3.7
 langchain==0.2.1
 langchain-community==0.2.1
 langchain-core==0.2.1
 langchain-openai==0.1.7
 langchain-text-splitters==0.2.0
 langsmith==0.1.63
+Mako==1.3.5
 MarkupSafe==2.1.5
 marshmallow==3.21.2
 multidict==6.0.5
@@ -42,28 +51,32 @@ mypy-extensions==1.0.0
 numpy==1.26.4
 openai==1.30.3
 orjson==3.10.3
-packaging
+packaging==23.2
 pandas==2.2.2
+prompt_toolkit==3.0.47
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+pydantic==2.7.1
+pydantic_core==2.18.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pydantic_core==2.18.2
 pytz==2024.1
 PyYAML==6.0.1
-redis
+redis==5.0.7
 regex==2024.5.15
 requests==2.32.2
-rq
+rq==1.16.2
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.30
-six==1.16.0
-tzdata==2024.1
 tenacity==8.3.0
 tiktoken==0.7.0
 tqdm==4.66.4
 typing-inspect==0.9.0
 typing_extensions==4.12.0
+tzdata==2024.1
 urllib3==2.2.1
+vine==5.1.0
+wcwidth==0.2.13
 Werkzeug==3.0.2
 yarl==1.9.4
