--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ amqp==5.2.0
 annotated-types==0.7.0
 anyio==4.4.0
 argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
+#argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==2.4.1
 async-lru==2.0.4
@@ -104,7 +104,7 @@ notebook==7.2.0
 notebook_shim==0.2.4
 numpy==1.26.4
 openai==1.30.3
-orjson==3.10.3
+#orjson==3.10.3
 overrides==7.7.0
 packaging==23.2
 pandas==2.1.4
