--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,13 @@ Flask-Cors==4.0.1
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 numpy==2.1.0
+packaging==24.1
 pandas==2.2.2
 psycopg2==2.9.9
 pydotenv==0.0.7
