--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ blinker==1.8.2
 cachelib==0.9.0
 click==8.1.7
 colorama==0.4.6
+dnspython==2.6.1
 Flask==3.0.3
 Flask-Caching==2.3.0
 Flask-Cors==4.0.1
 Flask-Migrate==4.0.7
+Flask-PyMongo==2.3.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 gunicorn==23.0.0
@@ -19,6 +21,7 @@ packaging==24.1
 pandas==2.2.2
 psycopg2==2.9.9
 pydotenv==0.0.7
+pymongo==4.8.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
